fix flex and overflow problems

--- a/src/sass/Product.scss
+++ b/src/sass/Product.scss
@@ -2,8 +2,8 @@
 	border-radius: 5px;
 	background: white;
 	transition: 0.2s ease-in-out;
-	width: 333px;
-	margin: 30px;
+	width: 23%;
+	overflow: hidden;
 
 	&:hover {
 		box-shadow: 0px 5px 37px -22px rgba(0, 0, 0, 1);
@@ -27,7 +27,6 @@
 		object-fit: contain;
 		border-top-left-radius: 5px;
 		border-top-right-radius: 5px;
-		max-width: 333px;
 	}
 
 	button {
