--- a/src/sass/Products.scss
+++ b/src/sass/Products.scss
@@ -3,5 +3,6 @@
 	flex-wrap: wrap;
 	justify-content: space-around;
 	width: 1600px;
+	max-width: 100%;
 	margin: 0 auto;
 }
